[gd_scene load_steps=24 format=2]

[ext_resource path="res://ManagingSystems/EventsPlayer.gd" type="Script" id=1]
[ext_resource path="res://Actors/Player/Planet/Planet.tscn" type="PackedScene" id=2]
[ext_resource path="res://EnemyWaves/Wave1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/background-space.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game-begins.wav" type="AudioStream" id=5]
[ext_resource path="res://EnemyWaves/Wave2.tscn" type="PackedScene" id=6]
[ext_resource path="res://EnemyWaves/Wave3.tscn" type="PackedScene" id=7]
[ext_resource path="res://EnemyWaves/Wave4.tscn" type="PackedScene" id=8]
[ext_resource path="res://EnemyWaves/Wave5.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/Level.gd" type="Script" id=10]
[ext_resource path="res://Actors/Player/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://ManagingSystems/EnemyManager.tscn" type="PackedScene" id=12]
[ext_resource path="res://EnemyWaves/Wave6.tscn" type="PackedScene" id=13]
[ext_resource path="res://EnemyWaves/Wave7.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=2]
resource_name = "00-play_intro_music"
tracks/0/type = "method"
tracks/0/path = NodePath("MusicPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "01-first_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "02-second_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "03-third_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "04-fourth_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "05-fifth_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "06-sixth_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 13 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[sub_resource type="Animation" id=9]
resource_name = "07-final_wave_warning"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_play_next_event"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "08-seventh_wave"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyWaveManager:wave_scene")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("EnemyWaveManager")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_wave"
} ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 10 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 4 )

[node name="PlayerPosition" type="Position2D" parent="."]
position = Vector2( 946.013, 534.985 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="PlayerPosition" instance=ExtResource( 11 )]

[node name="Planet" parent="PlayerPosition" instance=ExtResource( 2 )]

[node name="EventsPlayer" type="AnimationPlayer" parent="."]
anims/00-play_intro_music = SubResource( 2 )
anims/01-first_wave = SubResource( 1 )
anims/02-second_wave = SubResource( 3 )
anims/03-third_wave = SubResource( 4 )
anims/04-fourth_wave = SubResource( 5 )
anims/05-fifth_wave = SubResource( 6 )
anims/06-sixth_wave = SubResource( 7 )
anims/07-final_wave_warning = SubResource( 9 )
anims/08-seventh_wave = SubResource( 8 )
script = ExtResource( 1 )

[node name="EnemyWaveManager" parent="." instance=ExtResource( 12 )]
wave_scene = ExtResource( 14 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
margin_left = -5.03967
margin_top = 246.945
margin_right = -5.03967
margin_bottom = 295.945
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
margin_left = 828.0
margin_right = 1092.0
margin_bottom = 49.0
text = "Final Wave!"

[connection signal="planet_destroyed" from="PlayerPosition/Planet" to="." method="_on_Planet_planet_destroyed"]
[connection signal="planet_explosion_animation_finished" from="PlayerPosition/Planet" to="." method="_on_Planet_planet_explosion_animation_finished"]
[connection signal="events_finished" from="EventsPlayer" to="." method="_on_EventsPlayer_events_finished"]
[connection signal="wave_finished" from="EnemyWaveManager" to="." method="_on_EnemyWaveManager_wave_finished"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_MusicPlayer_finished"]
